[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/snow.png" type="Texture" id=1]
[ext_resource path="res://scenes/GreenShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ObjectiveArea.gd" type="Script" id=4]
[ext_resource path="res://assets/green_finish.png" type="Texture" id=7]
[ext_resource path="res://scenes/GreenShip.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.5, 40 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="TileSet" id=3]
0/name = "snow.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 70, 70 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level2" type="Node"]

[node name="ObjectiveArea" type="Area2D" parent="."]
position = Vector2( 1904, 8 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 70.5, 40 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ObjectiveArea"]
scale = Vector2( 0.100714, 0.0761905 )
texture = ExtResource( 7 )
centered = false

[node name="GreenShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 1023, 601 )
script = ExtResource( 8 )
jumpCD = 0.4

[node name="Camera2D" type="Camera2D" parent="GreenShip"]
current = true
zoom = Vector2( 2, 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 70, 70 )
format = 1
tile_data = PoolIntArray( -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 26, 0, 0, 30, 0, 0, 65544, 0, 0, 65545, 0, 0, 65559, 0, 0, 65562, 0, 0, 65566, 0, 0, 131075, 0, 0, 131095, 0, 0, 131098, 0, 0, 131102, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196631, 0, 0, 196634, 0, 0, 196638, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262167, 0, 0, 262170, 0, 0, 262174, 0, 0, 327686, 0, 0, 327690, 0, 0, 327702, 0, 0, 327703, 0, 0, 327706, 0, 0, 327710, 0, 0, 393218, 0, 0, 393222, 0, 0, 393225, 0, 0, 393226, 0, 0, 393237, 0, 0, 393239, 0, 0, 393242, 0, 0, 393246, 0, 0, 458754, 0, 0, 458758, 0, 0, 458761, 0, 0, 458773, 0, 0, 458775, 0, 0, 458778, 0, 0, 458782, 0, 0, 524290, 0, 0, 524294, 0, 0, 524297, 0, 0, 524309, 0, 0, 524311, 0, 0, 524314, 0, 0, 524318, 0, 0, 589826, 0, 0, 589830, 0, 0, 589833, 0, 0, 589834, 0, 0, 589845, 0, 0, 589847, 0, 0, 589850, 0, 0, 589854, 0, 0, 655362, 0, 0, 655366, 0, 0, 655370, 0, 0, 655380, 0, 0, 655381, 0, 0, 655383, 0, 0, 655385, 0, 0, 655386, 0, 0, 655390, 0, 0, 720898, 0, 0, 720907, 0, 0, 720916, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720926, 0, 0, 786434, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786462, 0, 0, 851969, 0, 0, 851998, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917534, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983070, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0 )

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
