[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/StonePlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/BlueShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MovingPlatform.gd" type="Script" id=3]
[ext_resource path="res://scenes/ObjectiveArea.gd" type="Script" id=4]
[ext_resource path="res://moving_platform_curve.tres" type="Curve" id=5]
[ext_resource path="res://scenes/PlatformBlue.gd" type="Script" id=6]
[ext_resource path="res://assets/green_finish.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.5, 40 )

[node name="MainLevel" type="Node"]

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2( 35, 565 )
script = ExtResource( 3 )
posCurve = ExtResource( 5 )

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource( 1 )]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource( 1 )]
position = Vector2( 70, 0 )

[node name="StonePlatform3" parent="PlatformBlue" instance=ExtResource( 1 )]
position = Vector2( 140, 0 )

[node name="PlatformBlue2" type="Node2D" parent="."]
position = Vector2( 35, 565 )
script = ExtResource( 6 )

[node name="StonePlatform" parent="PlatformBlue2" instance=ExtResource( 1 )]
position = Vector2( 314, -112 )

[node name="StonePlatform2" parent="PlatformBlue2" instance=ExtResource( 1 )]
position = Vector2( 384, -112 )

[node name="StonePlatform3" parent="PlatformBlue2" instance=ExtResource( 1 )]
position = Vector2( 454, -112 )

[node name="BlueShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 72.7009, 357.901 )
gravity_scale = 2.5

[node name="Camera2D" type="Camera2D" parent="BlueShip"]
current = true
zoom = Vector2( 2, 2 )

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 70.5, 40 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ObjectiveArea"]
scale = Vector2( 0.100714, 0.0761905 )
texture = ExtResource( 7 )
centered = false

[node name="PlatformBlue3" type="Node2D" parent="."]
position = Vector2( 70, 1130 )
script = ExtResource( 6 )

[node name="StonePlatform" parent="PlatformBlue3" instance=ExtResource( 1 )]
position = Vector2( -140, -318 )

[node name="StonePlatform2" parent="PlatformBlue3" instance=ExtResource( 1 )]
position = Vector2( -70, -318 )

[node name="StonePlatform3" parent="PlatformBlue3" instance=ExtResource( 1 )]
position = Vector2( 0, -318 )

[node name="StonePlatform4" parent="PlatformBlue3" instance=ExtResource( 1 )]
position = Vector2( 70, -318 )

[node name="StonePlatform5" parent="PlatformBlue3" instance=ExtResource( 1 )]
position = Vector2( 140, -318 )

[node name="StonePlatform6" parent="PlatformBlue3" instance=ExtResource( 1 )]
position = Vector2( 210, -318 )

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
